--- a/portfolio/blog/templates/blog/index.html
+++ b/portfolio/blog/templates/blog/index.html
@@ -1,2 +1,16 @@
 {%extends "blog/base.html" %}
-<h3>index blog</h3>
+
+{%block content %}
+    {% if posts %}
+        {% for post in posts %}
+            <article>
+                <h2><a href="{% url 'detalle_post' post.titulo_slug %}">{{ post.titulo }}</a></h2>
+                <p>{{ post.contenido|truncatechars:200 }}</p>
+                <p>Fecha de publicacion: {{ post.fecha_creacion|date:"d/m/Y"}}</p>
+                <hr>
+            </article>
+        {% endfor %}
+    {% else %}
+        <p>No hay skibidi posts en el blog \|T-T|/p>
+    {% endif %}
+{%endblock %}
