--- a/portfolio/blog/templates/registration/login.html
+++ b/portfolio/blog/templates/registration/login.html
@@ -7,4 +7,5 @@
     {{ form.as_p }}
     <button type="submit">Entrar</button>
 </form>
+<p>¿No tienes una cuenta todavia? <a href="{% url 'registro' %}">Crea una cuenta aqui</a>.</p>
 {% endblock %}
