--- a/portfolio/blog/templates/blog/base.html
+++ b/portfolio/blog/templates/blog/base.html
@@ -1,17 +1,38 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'blog/css/styles.css' %}">
 </head>
 <body>
-    <nav>
-        <a href="/">Portfolio</a>
-        <a href="/blog">blog</a>
-        <a href="/admin">admin</a>
-        <h1>Blog</h1>
-        <p>Hola mundito</p>
-    </nav>
+    <header>
+        <div class="NombrePagina">
+            <img class="invertida" src="{% static 'portfolio/assets/favicon.png' %}" alt="icono" />
+            <span>Franco Chichizola</span>
+            <img src="{% static 'portfolio/assets/favicon.png' %}" alt="icono" />
+        </div>
+        <nav>
+            <ul>
+                <li><a href="/">Portfolio</a></li>
+                <li><a href="/blog">blog</a></li>
+                <li><a href="/admin">admin</a></li>
+            </ul>
+        </nav>
+        <div>
+            {% if user.is_authenticated %}
+                <p>Hola, {{ user.username }}!</p>
+                
+                <form action="{% url 'logout' %}" method="post" style="display: inline;">
+                    {% csrf_token %}
+                    <button type="submit">Cerrar Sesión</button>
+                </form>
+            {% else %}
+                <a href="{% url 'login' %}">Iniciar Sesión</a>
+            {% endif %}
+        </div>
+        </header>
     <main>
         {% block content %}
         
