--- a/portfolio/blog/templates/blog/base.html
+++ b/portfolio/blog/templates/blog/base.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'blog/css/styles.css' %}">
+    <link rel="icon" type="image/png" href="{% static 'blog/assets/favicon.png' %}" />
+    {% block titulo%} {% endblock titulo%}
+    {% block css %} {% endblock css %}
 </head>
-<body>
+<body> 
     <header>
         <div class="NombrePagina">
             <img class="invertida" src="{% static 'portfolio/assets/favicon.png' %}" alt="icono" />
@@ -35,8 +37,11 @@
         </header>
     <main>
         {% block content %}
-        
         {% endblock %}
     </main>
+    <footer>
+        <p>PAPAS JHONSON STUDIOS©. Derechos reservados de uso</p>
+    </footer>
+    <script src="{% static 'portfolio/js/script.js' %}"></script>
 </body>
 </html>
