--- a/portfolio/blog/static/blog/css/crear_post.css
+++ b/portfolio/blog/static/blog/css/crear_post.css
@@ -109,74 +109,10 @@ header p {
     font-weight: bold;
 }
 
-main {
-    padding: 2rem 1rem;
-    max-width: 900px;
-    margin: 0 auto;
-}
-
-main h1 {
-    font-family: var(--font-titulo);
+h1{
     text-align: center;
-    font-size: 2.5rem;
-    margin-bottom: 2rem;
-    color: var(--color-primario);
+    margin: 20px;
 }
-
-main a[href*="crear_post"] {
-    display: inline-block;
-    background-color: var(--color-terciario);
-    color: var(--color-primario);
-    padding: 0.75rem 1.5rem;
-    text-decoration: none;
-    font-weight: bold;
-    border-radius: 0.5rem;
-    margin-bottom: 1.5rem;
-    transition: background-color var(--transition-speed);
-}
-
-main a[href*="crear_post"]:hover {
-    background-color: #f2c300;
-}
-
-article {
-    background-color: var(--color-secundario);
-    border-radius: 1rem;
-    padding: 2rem;
-    margin-bottom: 2rem;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.05);
-    transition: transform var(--transition-speed);
-}
-
-article:hover {
-    transform: translateY(-5px);
-}
-
-article h2 a {
-    text-decoration: none;
-    color: var(--color-primario);
-    font-family: var(--font-titulo);
-    font-size: 2rem;
-    transition: color var(--transition-speed);
-}
-
-article h2 a:hover {
-    color: var(--color-terciario);
-}
-
-article img {
-    width: 100%;
-    height: auto;
-    border-radius: 0.5rem;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-}
-
-article p {
-    line-height: 1.6;
-    margin-bottom: 0.5rem;
-}
-
 form {
   display: flex;
   flex-direction: column;
@@ -184,16 +120,18 @@ form {
   gap: 1rem;
   max-width: 600px;
   margin: 0 auto;
+  margin-bottom: 90px;
 }
 
 input,
 textarea {
-  width: 100%;
+  width: 700px;
   padding: 0.8rem;
   border: 2px solid var(--color-primario);
   border-radius: 0.5rem;
   font-size: 1rem;
   transition: 0.3s ease;
+  resize: none;
 }
 
 input:focus,
@@ -202,7 +140,43 @@ textarea:focus {
   border-color: var(--color-terciario);
   box-shadow: 0 0 5px var(--color-terciario);
 }
+.multi input[type="file"] {
+    display: none;
+}
+.multi  {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
+}
+.boton {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #f9f9f9;
+    border-radius: 5px;
+    cursor: pointer;
+    margin: 20px;
+}
+.imagen {
+    width: auto;
+    padding: 0.8rem;
+    border: 0px solid var(--color-primario);
+    border-radius: 0.5rem;
+    font-size: 1rem;
+    transition: 0.3s ease;
+    resize: none;
+}
+.foto {
+    background-color: #f9f9f9;
+    width: auto;
+    padding: 0.8rem;
+    border-radius: 0.5rem;
+    font-size: 1rem;
+    transition: 0.3s ease;
+    resize: none;
+    border: 2px solid var(--color-primario);
+}
 button {
   background-color: var(--color-terciario);
   color: var(--color-primario);
@@ -218,14 +192,14 @@ button:hover {
   background-color: #f2c300;
 }
 
-
 footer {
+
     background: #111;
     color: #fff;
     text-align: center;
     padding: 1rem 0;
-    position: static;
     bottom: 0;
+    position: fixed;
     width: 100%;
+    height: 50px;
 }
-
