--- a/portfolio/blog/static/blog/css/detalle_post.css
+++ b/portfolio/blog/static/blog/css/detalle_post.css
@@ -109,13 +109,8 @@ header p {
     font-weight: bold;
 }
 
-main {
-    padding: 2rem 1rem;
-    max-width: 900px;
-    margin: 0 auto;
-}
 
-main h1 {
+article h1 {
     font-family: var(--font-titulo);
     text-align: center;
     font-size: 2.5rem;
@@ -123,23 +118,14 @@ main h1 {
     color: var(--color-primario);
 }
 
-main a[href*="crear_post"] {
-    display: inline-block;
-    background-color: var(--color-terciario);
-    color: var(--color-primario);
-    padding: 0.75rem 1.5rem;
-    text-decoration: none;
-    font-weight: bold;
-    border-radius: 0.5rem;
-    margin-bottom: 1.5rem;
-    transition: background-color var(--transition-speed);
-}
-
-main a[href*="crear_post"]:hover {
-    background-color: #f2c300;
-}
-
 article {
+    display: flex;
+    flex-direction: column;
+    align-items: center;    
+    padding: 2rem 1rem;
+    max-width: 900px;
+    margin: 0 auto;
+    margin-top: 30px;
     background-color: var(--color-secundario);
     border-radius: 1rem;
     padding: 2rem;
@@ -148,24 +134,8 @@ article {
     transition: transform var(--transition-speed);
 }
 
-article:hover {
-    transform: translateY(-5px);
-}
-
-article h2 a {
-    text-decoration: none;
-    color: var(--color-primario);
-    font-family: var(--font-titulo);
-    font-size: 2rem;
-    transition: color var(--transition-speed);
-}
-
-article h2 a:hover {
-    color: var(--color-terciario);
-}
-
 article img {
-    width: 100%;
+    width: auto;
     height: auto;
     border-radius: 0.5rem;
     margin-top: 1rem;
@@ -175,8 +145,29 @@ article img {
 article p {
     line-height: 1.6;
     margin-bottom: 0.5rem;
+    text-align: center;
 }
-
+.comentarios {
+    padding: 2rem 1rem;
+    max-width: 900px;
+    margin: 0 auto;
+    background-color: var(--color-secundario);
+    border-radius: 1rem;
+    padding: 2rem;
+    margin-bottom: 2rem;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.05);
+    transition: transform var(--transition-speed);
+}
+h2{
+    padding-bottom: 20px;
+}
+.fecha_creacion {
+    font-size: 15px;
+    text-align: right;
+}
+p {
+    margin-bottom: 10px;
+}
 form {
   display: flex;
   flex-direction: column;
@@ -188,12 +179,13 @@ form {
 
 input,
 textarea {
-  width: 100%;
+  width: 700px;
   padding: 0.8rem;
   border: 2px solid var(--color-primario);
   border-radius: 0.5rem;
   font-size: 1rem;
   transition: 0.3s ease;
+  resize: none;
 }
 
 input:focus,
@@ -218,14 +210,13 @@ button:hover {
   background-color: #f2c300;
 }
 
-
 footer {
+    margin-top: 30px;
     background: #111;
     color: #fff;
     text-align: center;
     padding: 1rem 0;
-    position: static;
-    bottom: 0;
+    position: sticky;
     width: 100%;
+    height: 100%;
 }
-
