--- a/portfolio/blog/templates/blog/crear_post.html
+++ b/portfolio/blog/templates/blog/crear_post.html
@@ -1,9 +1,46 @@
 {% extends "blog/base.html" %}
+{% load static %} {% block css %}
+    <link rel="stylesheet" href="{% static 'blog/css/crear_post.css' %}">
+{% endblock css %}
+{% block titulo %}
+    <title>Crear post</title>
+{% endblock titulo %}
+
 
 {% block content %}
+    <h1>Crear Posts</h1>
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ form.as_p }}
+        <div>
+            {{ form.titulo }}
+        </div>
+        <div>
+            {{ form.contenido }}
+        </div>
+        <div class = multi>
+            {{ form.archivo_multimedia }}
+            <label for="id_archivo_multimedia" class="boton">Subir imagen</label>
+            <img class = 'foto' id="image-preview" src="#" alt="Vista previa de la imagen" >
+        </div>
+
         <button type="submit">Crear Post</button>
     </form>
+
+
+
+    <script>
+        const fileInput = document.getElementById('id_archivo_multimedia'); 
+        const preview = document.getElementById('image-preview');
+
+        fileInput.addEventListener('change', function() {
+            const file = this.files[0];
+            if (file) {
+                preview.src = URL.createObjectURL(file);
+                preview.style.display = 'block';
+            } else {
+                preview.src = '#';
+                preview.style.display = 'none';
+            }
+        });
+    </script>
 {% endblock %}
