--- a/portfolio/blog/templates/registration/registro.html
+++ b/portfolio/blog/templates/registration/registro.html
@@ -1,9 +1,20 @@
-<h2>Registrarse</h2>
+{% extends "blog/base.html" %}
+{% load static %} {% block css %}
+    <link rel="stylesheet" href="{% static 'blog/css/registro.css' %}">
+{% endblock css %}
+ {% block titulo %}
+    <title>Crear post</title>
+{% endblock titulo %}
+{% block content %}
+    <h1>Registrarse</h1>
 
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Registrarse</button>
-</form>
-
-<p>¿Ya tienes una cuenta? <a href="{% url 'login' %}">Inicia sesión aquí</a>.</p>
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Registrarse</button>
+    </form>
+    <div class = 'final'>
+        <p class = 'texto'>¿Ya tienes una cuenta?</p>
+        <a class= 'link' href="{% url 'login' %}">Inicia sesión aquí</a>
+    </div>
+{% endblock content %}
